crates/libtest2/tests/ui/ignore_incorrect_usage.stderr
error: unknown attribute 'ignore(reason = "invalid syntax right here")'
 --> tests/ui/ignore_incorrect_usage.rs:4:1
  |
4 | #[libtest2::test]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::_private::test_parse` which comes from the expansion of the attribute macro `libtest2::test` (in Nightly builds, run with -Z macro-backtrace for more info)
